# progz

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: bench.py
docs/: API.md
examples/: basic.py  color_stops.py  custom_style.py  indeterminate.py  layouts.py  multiple_bars.py  numbers.py  presets.py  signature.py  track.py  write_above.py
src/progz/: __init__.py  format.py  presets.py  progress.py  renderer.py  styles.py  terminal.py  track.py
tests/: test_format.py  test_import_time.py  test_progress.py  test_properties.py  test_rendering.py  test_styles.py  test_terminal.py  test_track.py
